--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,10 @@ max-line-length = 128
 
 [tool.poetry.dependencies]
 python = "3.12"
+starlette = "^0.33.0"
+unicorn = "^2.0.1.post1"
+uvicorn = "^0.24.0.post1"
+asgiref = "^3.7.2"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.2.1"
