--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,11 @@ max-complexity = 10
 max-line-length = 128
 
 [tool.poetry.dependencies]
-python = "3.12.1"
+python = "3.12"
 starlette = "^0.33.0"
 uvicorn = "^0.24.0.post1"
 asgiref = "^3.7.2"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.2.1"
