--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ click==8.1.7 ; python_version == "3.12"
 colorama==0.4.6 ; python_version == "3.12" and platform_system == "Windows"
 h11==0.14.0 ; python_version == "3.12"
 idna==3.6 ; python_version == "3.12"
+jinja2==3.1.2 ; python_version == "3.12"
+markupsafe==2.1.3 ; python_version == "3.12"
 sniffio==1.3.0 ; python_version == "3.12"
 starlette==0.33.0 ; python_version == "3.12"
-unicorn==2.0.1.post1 ; python_version == "3.12"
 uvicorn==0.24.0.post1 ; python_version == "3.12"
