--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ starlette = "^0.33.0"
 uvicorn = "^0.24.0.post1"
 asgiref = "^3.7.2"
 jinja2 = "^3.1.2"
+pymysql = "^1.1.0"
+dbutils = "^3.0.3"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.2.1"
