--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ anyio==4.1.0 ; python_version == "3.12"
 asgiref==3.7.2 ; python_version == "3.12"
 click==8.1.7 ; python_version == "3.12"
 colorama==0.4.6 ; python_version == "3.12" and platform_system == "Windows"
+dbutils==3.0.3 ; python_version == "3.12"
 h11==0.14.0 ; python_version == "3.12"
 idna==3.6 ; python_version == "3.12"
 jinja2==3.1.2 ; python_version == "3.12"
 markupsafe==2.1.3 ; python_version == "3.12"
+pymysql==1.1.0 ; python_version == "3.12"
 sniffio==1.3.0 ; python_version == "3.12"
 starlette==0.33.0 ; python_version == "3.12"
 uvicorn==0.24.0.post1 ; python_version == "3.12"
