--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ asgiref = "^3.7.2"
 jinja2 = "^3.1.2"
 pymysql = "^1.1.0"
 dbutils = "^3.0.3"
+cryptography = "^41.0.7"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.2.1"
